--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <!--logo-->
         <a href="index.html" class="logo" >
-            <img src="images/logo.png" />
+            <img src="logo.png" />
                  </a>
                  <!--menu-btn-->
                  <input type="checkbox" class="menu-btn" id="menu-btn" />
@@ -45,28 +45,28 @@
                  <li class="item-a">
                      <!--showcase-box-->
              <div class="showcase-box">
-                <img src="images/s-1.jpg"/>
+                <img src="s-1.jpg"/>
             </div>
                  </li>
                   <!--box-2-->
                   <li class="item-b">
                     <!--showcase-box-->
             <div class="showcase-box">
-               <img src="images/s-2.jpg"/>
+               <img src="s-2.jpg"/>
            </div>
                 </li>
                  <!--box-3-->
                  <li class="item-c">
                     <!--showcase-box-->
             <div class="showcase-box">
-               <img src="images/s-3.jpg"/>
+               <img src="s-3.jpg"/>
            </div>
                 </li>
                  <!--box-4-->
                  <li class="item-d">
                     <!--showcase-box-->
             <div class="showcase-box">
-               <img src="images/s-4.jpg"/>
+               <img src="s-4.jpg"/>
            </div>
                 </li>
             </li>
@@ -74,7 +74,7 @@
             <li class="item-d">
                <!--showcase-box-->
        <div class="showcase-box">
-          <img src="images/s-5.png"/>
+          <img src="s-5.png"/>
       </div>
            </li>
              </ul>
@@ -90,7 +90,7 @@
                 <div class="latest-box">
                     <!--img-->
                     <div  class="latest-b-img">
-                        <img src="images/m-1.jpg">
+                        <img src="m-1.jpg">
                     </div>
                     <!--text-->
                     <div class="latest-b-text">
@@ -105,7 +105,7 @@
                 <div class="latest-box">
                     <!--img-->
                     <div  class="latest-b-img">
-                        <img src="images/m-2.jpg">
+                        <img src="m-2.jpg">
                     </div>
                     <!--text-->
                     <div class="latest-b-text">
@@ -120,7 +120,7 @@
                 <div class="latest-box">
                     <!--img-->
                     <div  class="latest-b-img">
-                        <img src="images/m-3.jpg">
+                        <img src="m-3.jpg">
                     </div>
                     <!--text-->
                     <div class="latest-b-text">
@@ -135,7 +135,7 @@
                 <div class="latest-box">
                     <!--img-->
                     <div  class="latest-b-img">
-                        <img src="images/m-4.jpg">
+                        <img src="m-4.jpg">
                     </div>
                     <!--text-->
                     <div class="latest-b-text">
@@ -150,7 +150,7 @@
                 <div class="latest-box">
                     <!--img-->
                     <div  class="latest-b-img">
-                        <img src="images/m-5.jpg">
+                        <img src="m-5.jpg">
                     </div>
                     <!--text-->
                     <div class="latest-b-text">
@@ -165,7 +165,7 @@
                 <div class="latest-box">
                     <!--img-->
                     <div  class="latest-b-img">
-                        <img src="images/m-6.jpg">
+                        <img src="m-6.jpg">
                     </div>
                     <!--text-->
                     <div class="latest-b-text">
@@ -181,7 +181,7 @@
             <div class="latest-box">
                 <!--img-->
                 <div  class="latest-b-img">
-                    <img src="images/m-7.jpeg">
+                    <img src="m-7.jpeg">
                 </div>
                 <!--text-->
                 <div class="latest-b-text">
@@ -203,7 +203,7 @@
             <!--img-->
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="images/l-1.jpg">
+                <img src="l-1.jpg">
             </div>
             <!--text-->
             <a href="#">
@@ -215,7 +215,7 @@
                 <!--img-->
                 <div class="movies-img">
                     <div class="quality">HDRip</div>
-                    <img src="images/l-2.jpg">
+                    <img src="l-2.jpg">
                 </div>
                 <!--text-->
                 <a href="#">
@@ -227,7 +227,7 @@
             <!--img-->
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="images/l-3.jpg">
+                <img src="l-3.jpg">
             </div>
             <!--text-->
             <a href="#">
@@ -239,7 +239,7 @@
                 <!--img-->
                 <div class="movies-img">
                     <div class="quality">HDRip</div>
-                    <img src="images/l-4.jpg">
+                    <img src="l-4.jpg">
                 </div>
                 <!--text-->
                 <a href="#">
@@ -251,7 +251,7 @@
             <!--img-->
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="images/l-5.jpg">
+                <img src="l-5.jpg">
             </div>
             <!--text-->
             <a href="#">
@@ -263,7 +263,7 @@
                 <!--img-->
                 <div class="movies-img">
                     <div class="quality">HDRip</div>
-                    <img src="images/l-6.jpg">
+                    <img src="l-6.jpg">
                 </div>
                 <!--text-->
                 <a href="#">
@@ -275,7 +275,7 @@
             <!--img-->
             <div class="movies-img">
                 <div class="quality">HDRip</div>
-                <img src="images/l-7.jpg">
+                <img src="l-7.jpg">
             </div>
             <!--text-->
             <a href="#">
@@ -287,7 +287,7 @@
                 <!--img-->
                 <div class="movies-img">
                     <div class="quality">HDRip</div>
-                    <img src="images/l-8.jpg">
+                    <img src="l-8.jpg">
                 </div>
                 <!--text-->
                 <a href="#">
